[package]
name = "scraper"
version = "0.1.0"
authors = ["Howard Huang <h.huang65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
logging_timer = "1.0.0"
regex = "1.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.13", features = ["full"] }
scraper = "0.12.0"
